--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     width: 350px;
+    
 }
 
 .topRow {
@@ -21,7 +22,13 @@ body {
 .answer {
     width: 100%;
     flex: 3;
-    outline: .5px solid black;     
+    line-height: 70px;
+    text-align: right;
+    font-size: 1.5rem;
+}
+
+.calcDisplay {
+    margin-right: 30px;
 }
 
 .clear {
