--- a/SimpleVersion/main.css
+++ b/SimpleVersion/main.css
@@ -4,18 +4,29 @@ body {
 
 .calcContainer {
     margin: 0 auto;
-    padding-top: 10%;
+    margin-top: 10%;
     display: flex;
+    color: white;
     flex-direction: row;
     flex-wrap: wrap;
     width: 350px;
+    background: #64B255;
     
+}
+
+.operator {
+    background: #83C178;
+    color: black;
+}
+
+.operator:hover {
+    color: white;
 }
 
 .topRow {
     width: 100%;
     height: 5rem;
-    outline: .5px solid black;
+    outline: .5px solid lightgray;
     display: flex;
 }
 
@@ -34,14 +45,20 @@ body {
 .clear {
     flex: 1;
     text-align: center;
-    outline: .5px solid black;     
+    outline: .5px solid lightgray;     
 }
 
 .numberPad {
     width: calc(100% / 4);
     height: 5rem;
-    outline: .5px solid black; 
-    text-align: center;       
+    outline: .5px solid lightgray; 
+    text-align: center;  
+    font-weight: 100;     
+}
+
+.numberPad:hover {
+    background: #83C178;
+    color: white;
 }
 
 p {
